service-4-k8s/src/main/resources/k8s/kubernetes.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
#An API object that manages external access to the services in a cluster, typically HTTP.
#Ingress may provide load balancing, SSL termination and name-based virtual hosting.
metadata:
  name: quarkus-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: service-4-k8s
              servicePort: 8080
---
